# Finding-k-in-kmeans-clustering

./: README.md
output/: result.txt
src/: .k_for_kmeans.cpp.swp  CMakeLists.txt  Makefile  k_for_kmeans.cpp  k_for_kmeans.h  main.cpp
